# web_search_vs_responses_api

./: .gitignore  pyproject.toml
src/: web-search.py
