[tool.poetry]
name = "websearch"
version = "0.1.0"
description = ""
authors = ["lu_chan <lou.97213@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
langchain = "^0.3.20"
openai = "^1.66.3"
langchain-community = "^0.3.19"
beautifulsoup4 = "^4.13.3"
tiktoken = "^0.9.0"
scikit-learn = "1.4.0"
pipdeptree = "^2.25.1"
numpy = "1.26.4"
langgraph = "^0.3.16"
ipython = "^9.0.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
